	  unit list in the object.
   -- Tom Alsen added code to Blitzgame allowing monsters to regenerate hits
      during combat.  I have merged this code into the main base under a
	  configuration option.
   -- Patch for multiple types of taxing behaviour controlling who is
      allowed to tax.  Patch submitted by Stephen Baillie.
   -- Fixed a bug in BUY/SELL where two buys or sells of the same item would
      cause the second to fail with an error.
   -- Fixed another instance of the missing ENDFORM order which caused a
      crash.
   -- Added EVICT order as submitted by Peter Rayner
      <wacky_wizard001@hotmail.com> with slight modifications.
   -- Fixed bugs in combat where riding skill was being counted twice in
      defence, and ranged weaponswere using COMB skill for attack strength.
   -- Fixed bug in EVICT code that caused a segmentation fault
   -- Added SKILL_PRACTISE_AMOUNT and associated code all over the place
      to allow skills to improve with practice.  A unit may improve at
      most one skill per month, and will only improve skills they already
      have.  Using a skill counts as practising its prerequisites if they
      need to be impoved before the skill can advance further.  I suggest
      a value of 5 for SKILL_PRACTISE_AMOUNT.
   -- Fixed a bug where CanSee was not taking account of MIND skill.
   -- Modified combat acquisition algorithm for special attacks so that
      they will always find an appropriate target if one exists.
   -- Fixed a bug where unmounted units were being matched in the effect
      matching code for MOUNTIF.
   -- Cleaned up a small section of rules for clarity.
   -- Fixed up a bug with two sell orders for the same item which did
      insufficient checking that you could sell both quantities.  This
	  bug existed for a while but never showed up because of the bug
	  with multiple sells of the same item which I fixed a few weeks ago.